--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,6 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     id 'androidx.navigation.safeargs' version '2.5.3' apply false
+    id 'org.jetbrains.kotlin.multiplatform' version '1.7.20' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.20' apply false
 }
