--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs'
     id 'kotlinx-serialization'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -54,6 +55,13 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
     implementation "com.jakewharton.threetenabp:threetenabp:1.4.1"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1"
+
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+
+    implementation "me.tatarka.bindingcollectionadapter2:bindingcollectionadapter:4.0.0"
+    implementation("me.tatarka.bindingcollectionadapter2:bindingcollectionadapter-recyclerview:4.0.0") {
+        transitive false
+    }
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
