--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1"
 
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
 
     implementation "me.tatarka.bindingcollectionadapter2:bindingcollectionadapter:4.0.0"
     implementation("me.tatarka.bindingcollectionadapter2:bindingcollectionadapter-recyclerview:4.0.0") {
