fix package name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 }
 
 android {
-    namespace 'com.example.stablediffuser'
+    namespace 'com.benoithebrard.stablediffuser'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.stablediffuser"
-        minSdk 23
+        applicationId "com.benoithebrard.stablediffuser"
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
