--- a/build.gradle
+++ b/build.gradle
@@ -6,4 +6,5 @@ plugins {
     id 'androidx.navigation.safeargs' version '2.5.3' apply false
     id 'org.jetbrains.kotlin.multiplatform' version '1.7.20' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.20' apply false
+    id 'com.google.dagger.hilt.android' version '2.44.2' apply false
 }
