--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,35 +9,46 @@ plugins {
 
 android {
     namespace 'com.benoithebrard.stablediffuser'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.benoithebrard.stablediffuser"
         minSdk 26
-        targetSdk 33
-        versionCode 10
-        versionName "1.3.2"
+        targetSdk 34
+        versionCode 11
+        versionName "1.4.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
+        debug {
+            minifyEnabled false
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        configureEach {
+            buildConfigField("int", "VERSION_CODE", "${defaultConfig.versionCode}")
+            buildConfigField("String", "VERSION_NAME", "\"${defaultConfig.versionName}\"")
+        }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
     buildFeatures {
         dataBinding true
         viewBinding true
     }
+
 }
 
 dependencies {
